--- a/frontend/admin/src/index.html
+++ b/frontend/admin/src/index.html
@@ -18,12 +18,15 @@
       height: 100%;
     }
     .app-loading {
-      position: relative;
       display: flex;
-      flex-direction: column;
       align-items: center;
       justify-content: center;
-      height: 100%;
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      background: #7282da;
     }
     .spinner {
       display: inline-block;
