--- a/frontend/admin/src/index.html
+++ b/frontend/admin/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Ubernise - Admin</title>
   <base href="/">
-  <meta name="theme-color" content="#1976d2">
+  <meta name="theme-color" content="#ffbd57">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
