adding app description

--- a/frontend/admin/src/index.html
+++ b/frontend/admin/src/index.html
@@ -5,6 +5,7 @@
   <title>Ubernise - Admin</title>
   <base href="/">
   <meta name="theme-color" content="#ffbd57">
+  <meta name="description" content="This application can be used to manage races and their payments">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
